--- a/BlogCore/BlogCore.csproj
+++ b/BlogCore/BlogCore.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\imagenes\articulos\" />
+    <Folder Include="wwwroot\imagenes\sliders\" />
   </ItemGroup>
 
 </Project>
